# fastapi-sqlalchemy-book-crud

./: README.md  main.py  pyproject.toml
app/: settings.py
app/api/: api_v1.py  dependencies.py
app/crud/: __init__.py  base.py  crud_author.py  crud_author_copy.py  crud_author_plain.py  crud_book.py  crud_book_pain.py  crud_book_plain.py
app/db/: base.py  base_class.py  database.py  session.py
app/models/: author.py  book.py
app/schemas/: __init__.py  author.py  book.py
app/test/: test_book.py  test_get_book.py  test_get_by_id.py
mongo_tests/refactory/: test_author_recreate_database.py  test_base___init__.py  test_base_create.py  test_base_get.py  test_base_get_multi.py  test_base_remove.py  test_base_update.py  test_book_recreate_database.py  test_crud_author_create.py  test_crud_author_get.py  test_crud_author_get_all.py  test_crud_author_plain_create.py  test_crud_author_plain_get.py  test_crud_author_plain_get_all.py  test_crud_author_plain_update.py  test_crud_author_update.py  test_crud_book_create.py  test_crud_book_get_books_with_id.py  test_crud_book_get_multi.py  test_crud_book_get_with_author.py  test_crud_book_plain_create.py  test_crud_book_plain_get_books_with_id.py  test_crud_book_plain_get_multi.py  test_crud_book_plain_get_with_author.py  test_crud_book_plain_update.py  test_crud_book_update.py  test_dependencies_get_db.py  test_main_recreate_database.py
tests/: test_book.py  test_create_auth.py  test_create_author.py  test_create_book.py  test_delete_book.py  test_main.py  test_update_book.py
tests/db_migration/: test_base___init__.py  (+40 more)
(+57 files in other folders)
