[tool.poetry]
name = "testing-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "1.4.4"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
httpx = "^0.25.1"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
